# weka-operator

./: .dockerignore  .envrc  .gitignore  .gitmodules  .goreleaser.dev.yaml  .goreleaser.yaml  .local_test.py  .pre-commit-config.yaml  .projections.json  .releaserc  .semrelrc  .swn  .tool-versions  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.release  Makefile  PROJECT  README.md  Taskfile.yml  bliss-template.yaml  build-release.sh  cluster.yaml  dagger  dagger-remote  dagger-scalar  dagger.json  docker-bake.hcl  generate_notes.js  go.mod  go.sum  go.work  go.work.sum  image.Dockerfile  index.yaml  kubeconfig.yaml  main.go  package-lock.json  package.json  (+3 more)
.ainav/: index.md  tasks.md
.dagger/: .gitignore  README.md  pyproject.toml
.github/: CODEOWNERS
aitasks/: task_create_test_nfs_storage.txt  task_minimal_cluster.yaml  task_operator_csi_nfs.txt  task_operator_nfs_cluster_migrate.txt  task_upgrade_csi.txt  task_upgrade_csi.txt.plan.json
aitests/: 10_nodes_raft_9.txt  5_clusters.txt  bot_provision.txt  bot_provision.txt.plan.json  bot_provision_with_ha_and_mixed.txt  bot_provision_with_ios.txt  (+30 more)
ansible/: README.md  ansible_runner.sh  eks.sh  eks.yaml  inventory.ini  oci.sh  oci.yaml  oci_clean.yaml  physical.sh  physical.yaml  pyproject.toml
ansible/group_vars/: all.yaml
ansible/roles/common/defaults/: main.yaml
ansible/roles/common/tasks/: main.yml
ansible/roles/drivers/defaults/: main.yml
ansible/roles/drivers/tasks/: main.yml
ansible/roles/k3s/tasks/: install.yml  main.yml  resources.yml
ansible/roles/k3s/templates/: dockerconfig.json.j2
(+940 files in other folders)
