[tool.pytest.ini_options]
minversion = "8.2"
addopts = ""
testpaths = ["test/e2e"]
markers = """
  first: control test ordering - run first
  second: control test ordering - run second
  second_to_last: control test ordering - run second to last
  last: control test ordering - run last
  """

[tool.poetry]
name = "weka-operator-e2e"
version = "0.1.0"
description = "End to end test suite for weka operator"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.26.1"
pytest = "^8.2.0"
kubernetes = "^29.0.0"
plumbum = "^1.8.3"
pytest-ordering = "^0.6"
pydantic = "^2.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
