[tool.poetry]
name = "build-k8s-lab"
version = "0.1.0"
description = ""
authors = ["Matthew Pfefferle <matthew.pfefferle@weka.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ansible = "^9.1.0"
kubernetes = "^29.0.0"
boto3 = "^1.34.36"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
